--- a/whitepaper.htm
+++ b/whitepaper.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Swap: A Peer-to-Peer Protocol for Trading Ethereum Tokens</title>
+    <title>OXS: A Peer-to-Peer Protocol for Trading Ethereum Tokens</title>
     <meta name="description" content="We present a peer-to-peer methodology for trading ERC20 tokens on the Ethereum blockchain.">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,7 +15,7 @@
     <meta property="og:description" content="We present a peer-to-peer methodology for trading ERC20 tokens on the Ethereum blockchain." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://www.airswap.io/" />
+    <meta property="og:url" content="https://www.oxs.fi/" />
 
     <!-- Twitter Metadata -->
     <meta name="twitter:title" content="Swap: A Peer-to-Peer Protocol for Trading Ethereum Tokens" />
@@ -52,7 +52,7 @@
     <section>
         <div class="paper-container">
             <div class="paper-metadata">
-                <a href="https://www.airswap.io/">AirSwap</a> is an implementation of the Swap Protocol.
+                <a href="https://www.airswap.io/">OXS</a> is an implementation of the Swap Protocol.
             </div>
 
             <h1 class="paper-title">
@@ -520,7 +520,7 @@ cancel(&lt;makerAddress&gt;, 5, 'GNO', &lt;takerAddress&gt;, 10, 'BAT', &lt;expi
             </p>
 
             <p>
-                For questions, comments, or feedback, please reach us at <a href="mailto:team@airswap.io">team@airswap.io</a>.
+                For questions, comments, or feedback, please reach us at <a href="mailto:team@oxs.fi">team@oxs.fi</a>.
             </p>
         </div>
     </section>
