--- a/whitepaper.htm
+++ b/whitepaper.htm
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#2b71ff" />
 
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="Swap: A Peer-to-Peer Protocol for Trading Ethereum Tokens" />
+    <meta property="og:title" content="OXS: A Peer-to-Peer Protocol for Trading Ethereum Tokens" />
     <meta property="og:image" content="https://www.airswap.io/airswap-ogp.png" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="We present a peer-to-peer methodology for trading ERC20 tokens on the Ethereum blockchain." />
