--- a/whitepaper.htm
+++ b/whitepaper.htm
@@ -53,7 +53,7 @@
     <section>
         <div class="paper-container">
             <div class="paper-metadata">
-                <a href="https://www.airswap.io/">OXS</a> is an implementation of the Swap Protocol.
+                <a href="https://www.oxs.fi/">OXS</a> is an implementation of the Swap Protocol.
             </div>
 
             <h1 class="paper-title">
