--- a/whitepaper.htm
+++ b/whitepaper.htm
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://www.oxs.fi/" />
 
     <!-- Twitter Metadata -->
-    <meta name="twitter:title" content="Swap: A Peer-to-Peer Protocol for Trading Ethereum Tokens" />
+    <meta name="twitter:title" content="OXS: A Peer-to-Peer Protocol for Trading Ethereum Tokens" />
     <meta name="twitter:image" content="https://www.airswap.io/airswap-ogp.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AirSwap" />
@@ -57,7 +57,7 @@
             </div>
 
             <h1 class="paper-title">
-                Swap: A Peer-to-Peer Protocol for Trading Ethereum Tokens
+                OXS: A Peer-to-Peer Protocol for Trading Ethereum Tokens
             </h1>
 
             
